--- a/login.html
+++ b/login.html
@@ -9,23 +9,24 @@
 </head>
 <body class="login-body">
     <main>
-
+    <a href="http://" class="back-link"> < Voltar</a>
     <h1>BEM VINDO</h1>
     <p>Faça o seu login ;)</p>
 
     <section class="login-box">
         <form action="">
-            <fieldset>
-            <label for="fname">Login</label>
-            <input type="text" id="fname" name="fname">
-            <label for="lname">Senha</label>
-            <input type="password" id="lname" name="lname">
-            <input type="submit" placeholder="entrar" class="login-input">
-         </fieldset>
-          </form>
-          <p>Não tem uma conta? <a href="http://registrar">Registre-se aqui</a></p>
-    </section>
 
+            <fieldset>
+            <label for="username">Login</label>
+            <input type="email" id="username" name="username" title="Insira o seu e-mail" required>
+            <label for="password">Senha</label>
+            <input type="password" id="password" name="password" title="Insira a sua senha." required>
+            <input type="submit" placeholder="entrar" class="login-input" title="Efetuar Login" value="Login">
+         </fieldset>
+
+          </form>
+          <p style="font-size: 1.5em;">Não tem uma conta? <a href="http://registrar">Registre-se aqui</a></p>
+    </section>
 </main>
 </body>
 </html>
